refact: transition gap in team section fixed

--- a/src/styles/blocks/team/__cards/team__cards.css
+++ b/src/styles/blocks/team/__cards/team__cards.css
@@ -1,11 +1,11 @@
 .team__cards {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     flex-wrap: wrap;
     row-gap: 30px;
 }
 
-@media screen and (min-width: 1160px) {
+@media screen and (min-width: 1220px) {
     .team__cards {
         justify-content: space-between;
     }
